--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -3,7 +3,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.875rem;
+  font-size: 1.675rem;
 }
 
 h3 {
